--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,16 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
 body {
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 ::-webkit-scrollbar {
